# runelink

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  dist-workspace.toml
.github/: build-setup.yml
.sqlx/: query-0b4df8624845363324ef16a6da79d7275c63593f1b09e851bf694ba865bb9c22.json  query-0bf31195b1d87b79a5ac36de2f848403f9b65e744a3da79106c8ef97dcf935c5.json  query-10e8fd35f60caa4c8f4d9fcd5284bdbe49ea7ccb407a4bfa145659739fdcd560.json  query-11f87c721cbec8b7200657890f29cbab8537e89e9fa198549bd0be4a9e7abfe1.json  query-15f34e44946fb28ccd33e964def7572fe43422fdcee78ed088ef416ccc3f99c8.json  query-185826ee1dfd61799b33113a44a15488fd98c3de8a474424f6aed42ed8b087d8.json  query-1f7b1262e41e91b421b62ae4610dfec7a83a930ac1b9eb99b871a0dd2ba3f383.json  query-2381721bff8b0aff9220bee9531b131f3243f0489d502fd5ec1dc88fa82d5b53.json  query-23ab9990728cce70590f762b4187203ee6a682ab91588057e2fc9ac30504c555.json  query-2dd654beb380b2a9daa22068ff9fc233fd895073649df1499c5e63784356d737.json  query-33f0bebb3b072fbf961a3afc9a4e79e3aa099b57da20e9ff8e552d41ec430b65.json  query-343144d43e3622635ca6a46d31f7aa0f71f77058fb5348cc8786e98277ea7ca8.json  query-3798afdbcaa6659f45e25386863adea911abf21c3dbe1a180ac4b4a645853825.json  query-440f4e3608f57f825d96d5fb50d97ba6643432d712c4797667b083fbf2e5759e.json  query-55c63a6a1eea025464946d1f6c282883517f081031231add6a4c0ff61198761f.json  query-5a9507caf286de42c4a069da718a8a04c06af96abd0b97daf8ece31c0feaa250.json  query-5b0f5cdc94b5d5d45265a9a3db1377c05158f1a1a4db2e1216d25aa57fbc5efd.json  query-5ec5bf6e6f1f23a6474b7c991f4520235d9269d9e9a68620b3dfc26f64533bbd.json  query-653c7440030f8fe33326bd3d7dedfc0524373d1a7f84e9d635a93a2207e8fdd1.json  query-75631a59016c60e0f3a8df2ad0f8b64fc78ca7c00085e58f55ab471141ee4cd1.json  query-76c7cf284fc21992c788721d7b0f30e11fc84a9d66ffedbb1c9ab5c368e58a69.json  (+23 more)
deploy/: Caddyfile.example
runelink-cli/: Cargo.toml
runelink-cli/src/: error.rs  main.rs  storage.rs  storage_auth.rs  util.rs
runelink-cli/src/cli/: account.rs  channels.rs  config.rs  context.rs  input.rs  messages.rs  mod.rs  select.rs  servers.rs  users.rs
runelink-client/: Cargo.toml
runelink-client/src/: lib.rs  util.rs  validation.rs
runelink-client/src/requests/: channels.rs  generic.rs  memberships.rs  messages.rs  servers.rs  users.rs
runelink-server/: .env.example  Cargo.toml  config.example.toml
runelink-server/src/: auth.rs  auth_service.rs  config.rs  db.rs  error.rs  ids.rs  jwks_resolver.rs  key_manager.rs  main.rs  state.rs  ws_pools.rs
runelink-server/src/api/: auth.rs  channels.rs  memberships.rs  messages.rs  mod.rs  servers.rs  users.rs
runelink-server/src/ops/: channels.rs  fanout.rs  federation.rs  memberships.rs  messages.rs  mod.rs  servers.rs  users.rs
runelink-server/src/queries/: channels.rs  memberships.rs  messages.rs  servers.rs  users.rs
runelink-server/src/ws/: client_manager.rs  error.rs  federation_manager.rs  handlers.rs  incoming.rs  mod.rs  pools.rs  routing.rs  socket_loops.rs
runelink-server/src/ws/handlers/: client.rs  federation.rs  mod.rs  shared.rs
runelink-types/: Cargo.toml
runelink-types/src/: auth.rs  channel.rs  ids.rs  lib.rs  message.rs  server.rs  ws.rs
(+7 files in other folders)
