[package]
name = "runelink-cli"
version = "0.3.2"
edition = "2024"
repository.workspace = true

[[bin]]
name = "rune"
path = "src/main.rs"

[dependencies]
runelink-client = { path = "../runelink-client" }
runelink-types = { path = "../runelink-types" }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
clap = { version = "4.5.38", features = ["derive"] }
clap_complete = "4.5.50"
directories = "6.0.0"
crossterm = "0.29.0"
log = "0.4.28"
env_logger = "0.11.8"
