[package]
name = "runelink-client"
version = "0.3.0-beta.1"
edition = "2024"
repository.workspace = true

[dependencies]
runelink-types = { path = "../runelink-types" }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
log = "0.4.28"
