[package]
name = "runelink-server"
version = "0.2.0"
edition = "2024"

[dependencies]
runelink-client = { path = "../runelink-client" }
runelink-types = { path = "../runelink-types", features = [ "sqlx" ] }
axum = { version = "0.8.4", features = ["ws"] }
toml = "1.0.3"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "time"
] }
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
argon2 = "0.5.3"
rand = "0.8"
jsonwebtoken = "9.3.1"
base64 = "0.22.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pkcs8"] }
dirs-next = "2.0.0"
log = "0.4.28"
env_logger = "0.11.8"
futures-util = "0.3.32"
tokio-tungstenite = "0.28.0"
