[package]
name = "runelink-types"
version = "0.3.0-beta.0"
edition = "2024"
repository.workspace = true

[features]
default = []
sqlx = [ "dep:sqlx" ]

[dependencies]
base64 = "0.22.1"
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "time"
], optional = true }
time = { version = "0.3.41", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
